add tables breakpoint

--- a/list.html
+++ b/list.html
@@ -59,7 +59,7 @@
                     <i class="fa fa-shopping-cart" aria-hidden="true"></i> 快速下單</button>
             </div>
         </div>
-        <table class="table table-responsive table-hover">
+        <table class="table table-responsive-md table-hover">
             <thead>
                 <tr>
                     <th width="60">#</th>
